Regression: Nodes: Memory leaks #111936

Closed
opened 2023-09-04 19:50:54 +02:00 by Iliya Katushenock · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 13:21, hash: 400f7c22bc98
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-25 22:23, hash: 67843e188b24

Caused by: e071288ab2

Short description of error
Today build:

Data from NT len: 24 0000021FC4D27258
Data from NT len: 16 0000021FB6070D98
Data from NT len: 16 0000021FB6070D48
Data from NT len: 16 0000021FB6070CF8
Data from NT len: 24 0000021FC4D271F8

Exact steps for others to reproduce the error

  1. Open attached blend. file.
  2. Close blender.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 13:21, hash: `400f7c22bc98` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-25 22:23, hash: `67843e188b24` Caused by: e071288ab2901f43a5cde82a49c02101cd579aad **Short description of error** Today build: ``` Data from NT len: 24 0000021FC4D27258 Data from NT len: 16 0000021FB6070D98 Data from NT len: 16 0000021FB6070D48 Data from NT len: 16 0000021FB6070CF8 Data from NT len: 24 0000021FC4D271F8 ``` **Exact steps for others to reproduce the error** 1. Open attached blend. file. 2. Close blender.
Author
Member

Caused by: e071288ab2

@LukasTonne /^

> Caused by: e071288ab2 @LukasTonne /^
Lukas Tönne self-assigned this 2023-09-04 21:45:00 +02:00
Member

Any more info on how it got to this state? The output from out guardedalloc backtrace isn't helpful at all here, all i know is "it came from a node tree". I tried debug printing all the potential leaking pointers, but so far no luck in identifying the leaky ones.

The file version is 4.0.12, so before any of the node panels code went live. I tried with an older 4.0 version to recreate the file and run it through the versioning, no memleaks there.

Any more info on how it got to this state? The output from out guardedalloc backtrace isn't helpful at all here, all i know is "it came from a node tree". I tried debug printing all the potential leaking pointers, but so far no luck in identifying the leaky ones. The file version is 4.0.12, so before any of the node panels code went live. I tried with an older 4.0 version to recreate the file and run it through the versioning, no memleaks there.
Author
Member

Potentially, this file is even older and contains unused structures. It will be necessary to check in those versions in which I could save it ...

Potentially, this file is even older and contains unused structures. It will be necessary to check in those versions in which I could save it ...
Member

I misread the version info, the file is actually from 4.0.22. I've narrowed the data down to some socket default_values in the legacy ntree sockets. This data should not exist any more at that point ...

I misread the version info, the file is actually from 4.0.22. I've narrowed the data down to some socket `default_value`s in the legacy `ntree` sockets. This data should not exist any more at that point ...
Member

Oh i think i know what's going on: Because we want forward-compatibility there is "reverse versioning" code that constructs legacy socket lists. These should get freed here on loading, but this freeing code is incomplete. Just have to make sure all the potential stuff in bNodeSocket gets properly deallocated.

Oh i think i know what's going on: Because we want forward-compatibility there is "reverse versioning" code that constructs legacy socket lists. These should get freed [here](https://projects.blender.org/blender/blender/src/commit/df26271db4ca2b9f0f23e6cb208a6f896dd0f855/source/blender/blenloader/intern/versioning_400.cc#L999-L1015) on loading, but this freeing code is incomplete. Just have to make sure all the potential stuff in `bNodeSocket` gets properly deallocated.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-06 10:24:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111936
No description provided.